<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_name" translatable="false">QNOPY</string>
    <string name="action_settings">Settings</string>
    <string name="action_sync">Sync</string>
    <string name="upgrade_base_uri" translatable="false">https://staging.goaquablue.com:8080/AutoUpdate/AutoUpdate</string>
    <string name="prod_base_uri" translatable="false">https://app.qnopy.com/mobile/api/v20/</string>
    <string name="base_url_guid" translatable="false">https://staging.qnopy.com/serviceweb6/</string>
    <string name="url_get_user_guid" translatable="false">secure/common/user/guid</string>
    <string name="url_logout_keycloak_user" translatable="false">common/user/logout/</string>
    <string name="base_url_no_auth" translatable="false">https://staging.qnopy.com/servicenoauthweb6/</string>
    <string name="url_is_user_sso" translatable="false">common/user/realm/</string>
    <string name="url_get_user_login_details" translatable="false">user/by/guid</string>
    <string name="prod_user_task_data" translatable="false">task/management/get/all/data</string>
    <string name="prod_user_task_attachment_data" translatable="false">download/task/attachments/</string>
    <string name="prod_user_task_sync_data" translatable="false">task/management/post/task/data</string>
    <string name="prod_user_task_attachment_sync" translatable="false">task/management/attachment/sync</string>
    <string name="url_update_event_name" translatable="false">update/event/name</string>
    <string name="prod_workorder_task" translatable="false">get/workOrderTask</string>
    <string name="techSupport" translatable="false">techSupport/getTicketNumber</string>
    <string name="get_reports_by_id" translatable="false">get/reports/by/form/id</string>
    <string name="generate_report_by_id" translatable="false">generate/report/by/report/id</string>
    <string name="city_data" translatable="false">fielddata/issue/tracker</string>
    <string name="prod_login" translatable="false">login/</string>
    <string name="prod_app_update" translatable="false">autoupdate</string>
    <string name="workordertask" translatable="false">My Task</string>
    <string name="prod_sync_coc" translatable="false">create/coc</string>
    <string name="prod_get_coclist" translatable="false">get/cocList</string>
    <string name="get_all_tasks" translatable="false">task/management/get/all/data/</string>
    <string name="url_filefolder" translatable="false">retrieve/file</string>
    <string name="url_filedownload" translatable="false">retrieve/file/download</string>
    <string name="url_coc_file_download" translatable="false">json/excel/download</string>
    <string name="url_export_coc" translatable="false">generate/event/coc/export</string>
    <string name="url_download_gen_coc" translatable="false">download/file</string>
    <string name="prod_metadata_sync" translatable="false">meta/sync/</string>
    <string name="prod_metaformsjson" translatable="false">form/get/json/zip</string>
    <string name="prod_construction_simple_note_metadata_sync" translatable="false">simple/note/meta/sync</string>
    <string name="prod_construction_simple_note_data" translatable="false">simple/note/data</string>
    <string name="prod_construction_simple_note_data_sync" translatable="false">simple/note/data/sync</string>
    <string name="prod_construction_simple_note_images" translatable="false">download/simple/note/images/</string>
    <string name="prod_construction_simple_note_media_sync" translatable="false">simple/note/media/sync</string>
    <string name="prod_addSite" translatable="false">add/site</string>
    <string name="prod_location_percentage" translatable="false">location/fillcount</string>
    <string name="prod_get_app_preferences" translatable="false">get/featureList</string>
    <string name="prod_download_active_event_data" translatable="false">fielddata/active/event/attachement/data</string>
    <string name="prod_download_active_event_data_forUser" translatable="false">fielddata/activeevent/foruser</string>
    <string name="download_eventlist" translatable="false">event/list</string>
    <string name="mobile_report_required" translatable="false">generate/report</string>
    <string name="mobile_download_report_required" translatable="false">download/generated/report</string>
    <string name="accept_License" translatable="false">accept/license</string>
    <string name="prod_event_create" translatable="false">event/create/</string>
    <string name="prod_event_check" translatable="false">event/checkactive/</string>
    <string name="prod_fielddata_sync" translatable="false">fielddata/sync</string>
    <string name="prod_fielddata_sync_insert" translatable="false">insert/field/data</string>
    <string name="prod_fielddata_sync_update" translatable="false">update/field/data</string>
    <string name="prod_add_new_location" translatable="false">addLocation</string>
    <string name="prod_add_new_lovitem" translatable="false">addLovItems</string>
    <string name="prod_assignuser" translatable="false">assignUser</string>
    <string name="prod_upload_file" translatable="false">upload/attachments</string>
    <string name="prod_event_close" translatable="false">event/update/</string>
    <string name="prod_provision_device" translatable="false">provision/device</string>
    <string name="prod_upload_db" translatable="false">upload/user/database</string>
    <string name="prod_update_user_location" translatable="false">update/user/location</string>
    <string name="prod_workorder_sync" translatable="false">change/task/status</string>
    <string name="prod_registration" translatable="false">external/user/login</string>
    <string name="prod_verify_email" translatable="false">check/email/status</string>
    <string name="device_status_update" translatable="false">device/update</string>
    <string name="add_site_proj">Create Your First Project.</string>
    <string name="siteproj">Select Project</string>
    <string name="desc">image_description</string>
    <string name="about_title">About Markers</string>
    <string name="qr_title">QR Code for Markers</string>
    <string name="about_text">About</string>
    <string name="app_pref">App Preferences</string>
    <string name="auto_sync">Auto Sync</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="notePostbutton">Post</string>
    <string name="resize">Resize Image</string>
    <string name="gallerymenu">Saved Photos</string>
    <string name="gallery">Choose From Gallery</string>
    <string name="Logout">Logout</string>
    <string name="NearBy">Hospital</string>
    <string name="Help">Help</string>
    <string name="TaskOrder">My Tasks</string>
    <string name="report">Form Report</string>
    <string name="LocationPercent">LocationPer</string>
    <string name="FileFolder">Files</string>
    <string name="DownloadData">Download Event Data</string>
    <string name="downloadYourData">Download Data</string>
    <string name="MapDone">Done</string>
    <string name="LocList">Location List</string>
    <string name="update">Update App</string>
    <string name="downloadforms">Download Forms</string>
    <string name="deleteall_data">Reset App</string>
    <string name="add_signature">Add Signature</string>
    <string name="add_Location">Add Location</string>
    <string name="submit_signature">Submit</string>
    <string name="delete_user">Delete User</string>
    <string name="addText">Enter note</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="take_photo">Photo</string>
    <string name="senddb">Send DB</string>
    <string name="sendlog">Send Log</string>
    <string name="photo">Take Photo</string>
    <string name="itemcount">Count</string>
    <string name="title_activity_filefolder_main">FileFolder</string>
    <string name="emptyfilefolder">No Files.</string>
    <string name="color_chooser_title">Color Chooser</string>
    <string name="done">Done</string>
    <string name="addSite">Add New Site</string>
    <string name="Salutation">Hi,</string>
    <string name="str_rb_normal">Map</string>
    <string name="str_rb_satellite">Satellite</string>
    <string name="camera">Camera</string>
    <string name="sync_taskdata">Sync Data</string>
    <string name="submitnend">Submit and End Event</string>
    <string name="counter_alert">You have reached your maximum limit of characters allowed</string>
    <string name="prod_add_form_label">formfield/parameter/add</string>
    <string name="search_prompt">Choose a Filter</string>
    <string name="normal">Normal</string>
    <string name="satellite">satellite</string>
    <string name="access_token">sk.eyJ1IjoicW5vZHJvaWQiLCJhIjoiY2l0NDBjeG1lMDAwZzJ1cmg3bHk0NXYxZyJ9.690EVFalsuzVyUC7b7317w</string>
    <string name="choose_from_gallery">Gallery</string>
    <string name="enable_log">Enable Log</string>
    <string name="enable_comp">Low Res Photo</string>
    <string name="capture_sign">Capture Signature</string>
    <string name="enable_service">Background Sync</string>
    <string name="notetext">Symbol<b> PIPE(|) </b>in the text will be replaced by<b> COMMA(,) </b>and<b> COLON(:) </b>will be replaced by<b> HYPHEN(-)</b>.</string>
    <string name="user_name">User Name</string>
    <string-array name="search_by">
        <item>Project</item>
        <item>Form</item>

    </string-array>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="password">Password</string>
    <string name="intro1">A simple and robust app that replaces your clipboard and your site binders.</string>
    <string name="intro2">No more paperwork to manage. As soon as you collect your last sample or record your last note, you are done. No need to go back to office to file paperwork!</string>
    <string name="intro3">Never lose your data again. All your historic data accessible on the QNOPY web portal. Generate report tables and charts with click of a button.</string>
    <string name="change_event">Switch Form</string>
    <string name="my_events">Events</string>
    <string name="my_projects">My Projects</string>
    <string name="calendar">Calendar</string>
    <string name="sign_out">Sign Out</string>
    <string name="contact_support">Contact Support</string>
    <string name="send_db">Send DB</string>
    <string name="copy_form_data">Copy Form Data</string>
    <string name="paste_form_data">Paste Form Data</string>
    <string name="offline_map">Offline Map</string>
    <string name="refresh">Refresh</string>
    <string name="add_new_task">Add New Task</string>
    <string name="download_changes">Download Changes</string>
    <string name="assign_projects">Assign</string>
    <string name="hospitals">Hospitals</string>
    <string name="send_data_to_support">Send Data To Support</string>
    <string name="notifications">Notifications</string>
    <string name="enable_split_screen">Enable Split Screen</string>
    <string name="export_all_data_to_csv">Export all data to CSV</string>
    <string name="export_today_s_data_to_csv">Export today\'s data to CSV</string>
    <string name="erase_data">Erase Data</string>
    <string name="load_local_db">Load Local DB</string>
    <string name="guide">Guide</string>
    <string name="bad_elf">Bad Elf</string>
    <string name="formatted_entries">Formatted Entries</string>
    <string name="faster_forms">New Faster Forms<font color='#F44336'><h6><i>(beta 0.2)</i></h6></font></string>
    <string name="view_soil_log">Soil Log Report</string>
    <string name="chat_support">Chat</string>
    <string name="show_info_btns">Show info buttons</string>
    <string name="download_all_events_data">Download All Events Data</string>
    <string name="forced_sync">Forced Sync</string>
</resources>