<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/nearby"
        android:icon="@drawable/ic_hospital_rounded"
        android:title="@string/NearBy"
        android:visible="true"
        app:showAsAction="always" />

    <item
        android:id="@+id/overflowMenu"
        android:icon="@drawable/icon_option_menu"
        android:orderInCategory="105"
        android:title=""
        app:showAsAction="always">

        <menu>
            <item
                android:id="@+id/report"
                android:icon="@drawable/ic_view_report"
                android:title="@string/formatted_entries"
                android:visible="true" />

            <item
                android:id="@+id/reportSoilLog"
                android:icon="@drawable/ic_view_report"
                android:title="@string/view_soil_log"
                android:visible="false" />

            <item
                android:id="@+id/filefolder"
                android:icon="@drawable/ic_folder"
                android:title="@string/FileFolder"
                android:visible="true" />

            <item
                android:id="@+id/send_db"
                android:icon="@drawable/send_db"
                android:title="@string/send_db"
                android:visible="false" />

            <item
                android:id="@+id/download_your_owndata"
                android:icon="@drawable/ic_download_data"
                android:title="@string/downloadYourData"
                android:visible="false" />

            <item
                android:id="@+id/menu_change_event"
                android:icon="@drawable/ic_switch_forms"
                android:title="@string/change_event"
                android:visible="true" />
            <item
                android:id="@+id/menu_copy_form_data"
                android:icon="@drawable/ic_copy"
                android:title="@string/copy_form_data"
                android:visible="true" />
            <item
                android:id="@+id/menu_paste_form_data"
                android:icon="@drawable/ic_paste"
                android:title="@string/paste_form_data"
                android:visible="true" />

            <item
                android:id="@+id/menu_search_string"
                android:icon="@drawable/ic_search_black"
                android:title="Search in form"
                android:visible="true" />
        </menu>
    </item>

    <item
        android:id="@+id/taskorder"
        android:icon="@drawable/taskorder"
        android:title="@string/TaskOrder"
        android:visible="false" />

    <item
        android:id="@+id/enable_compression"
        android:checkable="true"
        android:checked="true"
        android:title="@string/enable_comp"
        android:visible="false" />

    <item
        android:id="@+id/app_preferences"
        android:title="@string/app_pref"
        android:visible="false"
        app:showAsAction="never" />


    <!--<item-->
    <!--android:id="@+id/about"-->
    <!--android:title="@string/about_text"-->
    <!--app:showAsAction="never" />-->

    <!--<item-->
    <!--android:id="@+id/user"-->
    <!--android:title="@string/Salutation"-->
    <!-- />-->

    <!--<item-->
    <!--android:id="@+id/logout"-->
    <!--android:title="@string/Logout"-->
    <!--app:showAsAction="never" />-->

    <!--<item
        android:id="@+id/addsite"
        app:showAsAction="never"
        android:title="@string/AddSite" />

-->


</menu>