<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_gallery"
        android:icon="@drawable/ic_menu_gallery"
        android:orderInCategory="99"
        android:title="@string/choose_from_gallery"
        android:visible="false"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_camera"
        android:icon="@drawable/camera_white"
        android:orderInCategory="100"
        android:title="@string/take_photo"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_save"
        android:orderInCategory="103"
        android:title="@string/save"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cancel"
        android:orderInCategory="102"
        android:title="@string/cancel"
        app:showAsAction="always" />

</menu>