<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:orderInCategory="101"
        android:title="@string/refresh"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_sync"
        android:icon="@drawable/ic_sync_badge"
        android:orderInCategory="101"
        android:title="@string/action_sync"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_new_task"
        android:icon="@drawable/add_post_qnote"
        android:orderInCategory="101"
        android:title="@string/add_new_task"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_task_view"
        android:icon="@drawable/ic_task_view"
        android:orderInCategory="101"
        android:title="Task list view"
        android:visible="false"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_task_map_view"
        android:icon="@drawable/ic_map_view"
        android:orderInCategory="101"
        android:title="Task map view"
        app:showAsAction="always" />
</menu>